crates/keron-lang/tests/corpus/errors/check/duplicate_val.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `name` is already defined in this scope
  --> 2:5
  |
2 | val name = "other"
  |     ^^^^
